Update README.md with section on support beyond Java8